# scalerschool_hackthon2

envs/support_ticket/: Dockerfile  README.hf.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
envs/support_ticket/server/: Dockerfile  app.py  environment.py  graders.py  tasks.py
